--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://lucasnativo.github.io/cv-pages",
+  "homepage": "http://lucasnativo.github.io/cv-project",
   "name": "cv-project",
   "version": "0.1.0",
   "private": true,
